# bazel-plugin-scala-ext

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  description.html  intellij.bazelproject
build_defs/: BUILD.bazel
intellij_platform_sdk/: BUILD.bazel
plugin_deps/: BUILD.bazel  BUILD.scala_plugin  plugin_dev.bzl
src/main/java/com/wix/intellij/scala/attachsources/: AttachScalaSourcesProvider.java  RootsAwareJarLibrary.java  ScalaAndJavaJarLibraryLocator.java  ScalaRootsDetector.java  ScalaVfsSourceRootDetectionUtil.java
testing/: BUILD.bazel
