load("@bazel_intellij//build_defs:build_defs.bzl", "repackaged_files")
load("@bazel_intellij//intellij_platform_sdk:build_defs.bzl", "select_for_plugin_api")

java_library(
    name = "ijwb",
    neverlink = 1,
    exports = [
        "@bazel_intellij//base",
        "@bazel_intellij//common/experiments",
        "@bazel_intellij//common/settings",
        "@bazel_intellij//common/transactions",
        "@bazel_intellij//java",
        "@bazel_intellij//proto:proto_deps",
        "@bazel_intellij//scala",
        "@bazel_intellij//sdkcompat",
        "@bazel_intellij//third_party/auto_value",
        "@error_prone_annotations//jar",
    ],
)

filegroup(
    name = "scala_plugin_files",
    srcs = select_for_plugin_api({
        "intellij-2019.2": ["@scala_2019_2//:plugin_files"],
        "intellij-ue-2019.2": ["@scala_2019_2//:plugin_files"],
        "intellij-2019.3": ["@scala_2019_3//:plugin_files"],
        "intellij-ue-2019.3": ["@scala_2019_3//:plugin_files"],
        "default": [],
    }),
)

repackaged_files(
    name = "scala_plugin",
    srcs = [":scala_plugin_files"],
    prefix = "",
    strip_prefix = "",
)
